[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
elliptic-curve = "0.11.0"
aes = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.4", features = ["derive"] }
ctr = "0.9.2"
p12 = "0.6.3"
p12-keystore = "=0.1.4"
rand = "0.8.0"
rcgen = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
zeroize = "1.8.1"


[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
